misc updates, including Sentinel htaccess redirect fix

--- a/loc-europe.html
+++ b/loc-europe.html
@@ -94,16 +94,9 @@ contact-uk: yes
 
         <h3 class="section-heading">Customer Service</h3>
         <div class="row">
-<!--
           <div class="col-sm-6">
-            <p><strong>Andrew Stevenson</strong><br/>
-              Main: +44 (0) 1684 892065<br/>
-            <a href="mailto:andrew.stevenson@stoneagetools.com">andrew.stevenson@stoneagetools.com</a></p>
-          </div>
--->
-          <div class="col-sm-6">
-            <p><strong>Alison Berry</strong><br/>
-            <a href="mailto:alison.berry@stoneagetools.com">alison.berry@stoneagetools.com</a></p>
+            <p><strong>Jame Guest</strong><br/>
+            <a href="mailto:james.guest@stoneagetools.com">james.guest@stoneagetools.com</a></p>
           </div>
           <div class="col-sm-6">
             <p><strong>James Stallard</strong><br/>
