--- a/waterblast-automation/lightweight-positioner.html
+++ b/waterblast-automation/lightweight-positioner.html
@@ -58,7 +58,7 @@ master-slider: yes
       </div>
 <!--      <p class="product-description promo-heading"><em>Package it with AutoPacks! <a href="/autopack-lwp" style="font-weight:300;">Find out how <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></em></p>-->
       
-      <p class="product-description">The Lightweight Positioner (LWP) is an indexing system that can be paired with a variety of StoneAge equipment for applications where controlled and repeatable movement is required.</p>
+      <p class="product-description">The Lightweight Positioner is an indexing system that can be paired with a variety of StoneAge equipment for applications where controlled and repeatable movement is required.</p>
       <p class="product-description">This system is engineered for use with AutoBox tractors for safe and efficient cleaning of exchanger tubes and can also be paired with shotgun tools for tube sheet cleaning and surface preparation.</p>
       
       <h2>Features</h2>
@@ -133,7 +133,7 @@ master-slider: yes
           <ul class="list-unstyled basic">
             <h3>Manuals</h3>
             <li><a href="/assets/pdf/manuals/LWPS-100_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;LWPS-100 Manual</a></li>
-            <li><a href="/assets/pdf/manuals/LWP-500-V2_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;LWP-500-V2 Manual (No Sentinel)</a><em class="grey">Discontinued</em></li>
+            <li><a href="/assets/pdf/manuals/LWP-500-V2_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;LWP-500-V2 Manual (No Sentinel)</a><em class="grey"> Discontinued</em></li>
           </ul>
         </div>
         <div class="col-sm-4">
