further cleanup of ABX-3L-V3, etc.

--- a/manuals.html
+++ b/manuals.html
@@ -59,18 +59,26 @@ permalink: /manuals
             <tbody class="searchable">
               <tr>
                 <td><a href="/abx-2l">ABX-2L-B</a><br></td>
-                <td>AUTOBOX ABX-2L-B<br>Automated system for dual flex lancing of exchanger tube IDs</td>
+                <td>AUTOBOX ABX-2L-B<br>Hose tractor for dual flex lancing of exchanger tube IDs</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L-B_manual.pdf" target="_blank" class="btn btn-sm">PL 673</a><br><small class="grey">Updated: 11/2019</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-2L_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 12/2019</small></td>
                 <td class="text-center"></td>
+              </tr> 
+              <tr>
+                <td><a href="/abx-3l">ABX-3L-V3</a><br></td>
+                <td>AUTOBOX 3L (No Sentinel)<br>Hose tractor for triple flex lancing of exchanger tube IDs </td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABX-3L-V3_manual.pdf" target="_blank" class="btn btn-sm">PL 702</a><br><small class="grey">Updated: 09/2021</small></td>
+                <td class="text-center"><a href="/assets/pdf/data-sheets/Sentinel_brochure.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 11/2021</small></td>
+                <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/abx-3l">ABXS-3L-V3</a><br></td>
-                <td>AUTOBOX 3L<br>Sentinel-enabled automated system for triple flex lancing of exchanger tube IDs</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/ABXS-3L_manual.pdf" target="_blank" class="btn btn-sm">PL 689</a><br><small class="grey">Updated: 09/2021</small></td>
+                <td><a href="/abx-3l">ABXS-3L</a><br></td>
+                <td>AUTOBOX 3L with Sentinel Automation Technology<br>Sentinel-enabled hose tractor for triple flex lancing of exchanger tube IDs</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABXS-3L_manual.pdf" target="_blank" class="btn btn-sm">PL 693</a><br><small class="grey">Updated: 09/2021</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/Sentinel_brochure.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
-                <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2018</small></td>
+<!--                <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2018</small></td>-->
                 <td class="text-center"></td>
               </tr>
               <tr>
@@ -82,8 +90,8 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/abx-pro">ABX-PRO</a></td>
-                <td>AUTOBOX ABX-PRO<br>Hose drive for small pipe cleaning, sometimes referred to as PRODRIVE</td>
+                <td><a href="/abx-pro">ABX-PRO or PRODRIVE</a></td>
+                <td>AUTOBOX ABX-PRO<br>Automated hose control device for small pipe cleaning</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/ABX-PRO_manual.pdf" target="_blank" class="btn btn-sm">PL 612</a><br><small class="grey">Updated: 11/2021</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/ABX-PRO_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-PRO_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 11/2020</small></td>
@@ -763,31 +771,31 @@ permalink: /manuals
               </tr>
               <tr>
                 <td>ABX-2L</td>
-                <td>AUTOBOX ABX-2L - Version 1<!--<br>Serial numbers XXX-XXXX <em class="grey" data-toggle="tooltip" data-placement="top" title="Just take a look at the bottom of the box, bro!"><i class="fa fa-info-circle"></i> Which one do I have?</em>--></td>
+                <td>AUTOBOX ABX-2L &mdash; Version 1<!--<br>Serial numbers XXX-XXXX <em class="grey" data-toggle="tooltip" data-placement="top" title="Just take a look at the bottom of the box, bro!"><i class="fa fa-info-circle"></i> Which one do I have?</em>--></td>
                 <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L_manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
                 <td>ABX-2L-V2</td>
-                <td>AUTOBOX ABX-2L - Version 2</td>
+                <td>AUTOBOX ABX-2L &mdash; Version 2</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L-V2_manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_ABX-2L-V2.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>ABX-3L</td>
-                <td>AUTOBOX ABX-3L - Version 1</td>
+                <td>AUTOBOX ABX-3L &mdash; Version 1</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/ABX-3L_manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_ABX-3L.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>ABX-3L-V2<br></td>
-                <td>AUTOBOX ABX-3L-V2 - Version 2</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/ABX-3L_manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
+                <td>AUTOBOX ABX-3L-V2 &mdash; Version 2</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABX-3L_manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
                 <td>ABX-500</td>
-                <td>AUTOBOX ABX-500 - Version 1<!--<br>Serial numbers XXX-XXXX <em class="grey" data-toggle="tooltip" data-placement="top" title="Just take a look at the bottom of the box, bro!"><i class="fa fa-info-circle"></i> Which one do I have?</em></td>-->
+                <td>AUTOBOX ABX-500 &mdash; Version 1<!--<br>Serial numbers XXX-XXXX <em class="grey" data-toggle="tooltip" data-placement="top" title="Just take a look at the bottom of the box, bro!"><i class="fa fa-info-circle"></i> Which one do I have?</em></td>-->
                 <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L_manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_ABX-500.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
