--- a/waterblast-automation/autopack-3l.html
+++ b/waterblast-automation/autopack-3l.html
@@ -165,9 +165,7 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Manuals</h3>
-            <li><a href="/assets/pdf/manuals/AutoPack-3L_manuals.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;AutoPack-3L Manuals (Binder)</a></li>
-            <li><a href="/assets/pdf/manuals/ABXS-3L_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-3L Manual</a></li>
-            <li><a href="/assets/pdf/manuals/LWPS-100_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;Lightweight Positioner Manual</a></li>
+            <li><a href="/assets/pdf/manuals/AutoPack-3L-manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;AutoPack-3L-V3 Manual</a></li>
           </ul>
         </div>
         <div class="col-sm-4">
@@ -223,12 +221,16 @@ master-slider: yes
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
-        <a href="/autopack-lwp"><img class="img-responsive" src="/assets/img/product/thumb-autopack-pro-01.jpg" alt="AutoPack-PROP">
-        <h5>AutoPack PROP</h5></a>
+        <a href="/autopack-3l-sentinel"><img class="img-responsive" src="/assets/img/product/autopack-3l-05.jpg" alt="AutoPack-3L">
+        <h5>AutoPack 3L Sentinel</h5></a>
       </div>
       <div class="item">
         <a href="/autopack-2l"><img class="img-responsive" src="/assets/img/product/thumb-autopack-3l-01.jpg" alt="AutoPack-2L-B">
         <h5>AutoPack 2L</h5></a>
+      </div>
+      <div class="item">
+        <a href="/autopack-lwp"><img class="img-responsive" src="/assets/img/product/thumb-autopack-pro-01.jpg" alt="AutoPack-PROP">
+        <h5>AutoPack PROP</h5></a>
       </div>
       <div class="item">
         <a href="/abx-3l"><img class="img-responsive" src="/assets/img/product/thumb-abx-3l-02.jpg" alt="AutoBox ABX-3L exchanger tube cleaning">
