--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -26,10 +26,29 @@ permalink: /waterblast-tools-automated-equipment
   <section class="container directory">
 
     <div class="mix exchanger-cleaning" data-name="autopack-3l" data-designation="automated">
-      <a href="/autopack-3l" class="search-text">
+      <a href="/autopack-3l-sentinel" class="search-text">
         <img src="/assets/img/product/autopack-3l-05.jpg" class="img-responsive" />
+        <h3>AutoPack 3L Sentinel</h3>
+        <h5>Smart Automated Equipment Kit</h5>
+        <table class="table">
+          <tbody>
+            <tr>
+              <td colspan="2" style="text-align:center;">Built around AutoBox 3L with<br>Sentinel Automation Technology</td>
+            </tr>
+            <tr>
+              <td colspan="2" style="text-align:center;">Triple lance tube cleaning</td>
+            </tr>
+          </tbody>
+        </table>
+        <button>View Details</button>
+      </a>
+    </div>
+    
+    <div class="mix exchanger-cleaning" data-name="autopack-3l" data-designation="automated">
+      <a href="/autopack-3l" class="search-text">
+        <img src="/assets/img/product/autopack-3l-01.jpg" class="img-responsive" />
         <h3>AutoPack 3L</h3>
-        <h5>Automated Equipment Kit with Sentinel Automation Technology</h5>
+        <h5>Automated Equipment Kit</h5>
         <table class="table">
           <tbody>
             <tr>
@@ -164,9 +183,9 @@ permalink: /waterblast-tools-automated-equipment
 
     <div class="mix exchanger-cleaning" data-name="abx-3l" data-designation="automated">
       <a href="/autobox-3l" class="search-text">
-        <img src="/assets/img/product/abx-3l-09.jpg" class="img-responsive" />
+        <img src="/assets/img/product/abx-3l-04.jpg" class="img-responsive" />
         <h3>AutoBox 3L</h3>
-        <h5>Triple flex-lancing system with Sentinel Automation Technology</h5>
+        <h5>Triple flex-lancing system</h5>
         <table class="table">
           <tbody>
             <tr>
