--- a/downhole-tools.html
+++ b/downhole-tools.html
@@ -96,16 +96,39 @@ permalink: /downhole-tools
     </div>
   </section>
 
-  <section class="fluid-container margin-bottom-30">
+  <section class="fluid-container">
     <div class="container">
       <div class="row padding-tb-30">
-        <h2>Hard-Hitting Cleaning Power</h2>
-        <p class="thin">Cut through paraffin, asphaltine, hydrates, calcium carbonate, barium sulphate or mineral scale with ease.</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/4RU21ZBTzP8?rel=0" frameborder="0" allowfullscreen></iframe>
+        <div class="col-sm-8 text-left">        
+          <h2>Hard-Hitting Cleaning Power</h2>
+          <p class="thin">Cut through paraffin, asphaltine, hydrates, calcium carbonate, barium sulphate or mineral scale with ease.</p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/4RU21ZBTzP8?rel=0" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="col-sm-4">
+          <h2>Have a question? Contact us</h2>
+           <!-- Pardot contact form -->
+            <iframe src="https://info.stoneagetools.com/l/644393/2021-11-11/4ckn3c" width="100%" height="600" type="text/html" frameborder="0" allowTransparency="true" style="border: 0"></iframe>
+            
+              <!-- Pardot form sizing -->
+              <script type="text/javascript">
+                // Create browser compatible event handler.
+                var eventMethod = window.addEventListener ? "addEventListener" : "attachEvent";
+                var eventer = window[eventMethod];
+                var messageEvent = eventMethod == "attachEvent" ? "onmessage" : "message";
+                // Listen for a message from the iframe.
+                eventer(messageEvent, function(e) {
+                  if (isNaN(e.data)) return;
+
+                  // replace #sizetracker with what ever what ever iframe id you need
+                  document.getElementById('sizetracker').style.height = e.data + 'px';
+
+                }, false);
+              </script>
+            <!-- End Pardot contact form -->
+            
+        </div> 
       </div>
     </div>
   </section>
 
 </main>
-
-{% include footer-cta.html %}
