--- a/waterblast-automation/autobox-3l.html
+++ b/waterblast-automation/autobox-3l.html
@@ -77,7 +77,7 @@ master-slider: yes
         <li>Hose clamp pressure and feed rates can be remotely adjusted on the fly for repeatable, consistent cleaning</li>
         <li>Proven reliability on the toughest jobs and most corrosive environments</li>
         <li>Low cost of ownership – low cost components, quick and easy maintenance</li>
-        <li><a href="/sentinel">Sentinel-ready</a></li>
+        <li>Easy upgrade to <a href="/sentinel">Sentinel Automation Technology</a></li>
       </ul>
       
       <div class="accessories">
@@ -118,7 +118,7 @@ master-slider: yes
             </tr>
             <tr>
               <th>Tool Model</th>
-              <td colspan="2">ABXS-3L-V3</td>
+              <td colspan="2">ABX-3L-V3</td>
             </tr>
             <tr>
               <th>Hose Size</th>
@@ -156,13 +156,13 @@ master-slider: yes
             </tr>
             <tr>
               <th>Dimensions</th>
-              <td>11.35 x 11.64 x 16.99 in.</td>
-              <td><span class="metric">288 x 296 x 432 mm</span></td>
+              <td>8.3 x 16.9 x 8.2 in.</td>
+              <td><span class="metric">211 x 429 x 208 mm</span></td>
             </tr>
             <tr>
               <th>Tractor Weight</th>
-              <td>52.6 lbs</td>
-              <td><span class="metric">24 kg</span></td>
+              <td>48 lbs</td>
+              <td><span class="metric">22 kg</span></td>
             </tr>
           </tbody>
           </table>
@@ -196,8 +196,8 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Manuals</h3>
-            <li><a href="/assets/pdf/manuals/ABXS-3L_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABXS-3L-V3 Manual</a></li>
-            <li><a href="/assets/pdf/manuals/ABX-3L-V2_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-3L-V2 Manual (No Sentinel)</a><em class="grey"> Discontinued</em></li>
+            <li><a href="/assets/pdf/manuals/ABX-3L-V3_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-3L-V3 Manual</a></li>
+            <li><a href="/assets/pdf/manuals/ABX-3L-V2_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-3L-V2 Manual</a><em class="grey"> (Discontinued)</em></li>
           </ul>
         </div>
         <div class="col-sm-4">
