--- a/waterblast-automation/autopack-2l.html
+++ b/waterblast-automation/autopack-2l.html
@@ -222,6 +222,10 @@ master-slider: yes
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
+        <a href="/autopack-3l-sentinel"><img class="img-responsive" src="/assets/img/product/autopack-3l-05.jpg" alt="AutoPack-3L">
+        <h5>AutoPack 3L Sentinel</h5></a>
+      </div>
+      <div class="item">
         <a href="/autopack-3l"><img class="img-responsive" src="/assets/img/product/thumb-autopack-3l-01.jpg" alt="AutoPack-3L">
         <h5>AutoPack 3L</h5></a>
       </div>
