--- a/waterblast-automation/autopack-pro.html
+++ b/waterblast-automation/autopack-pro.html
@@ -221,8 +221,8 @@ master-slider: yes
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
-        <a href="/autopack-prop"><img class="img-responsive" src="/assets/img/product/thumb-autopack-pro-01.jpg" alt="AutoPack-LWP">
-        <h5>AutoPack ProP</h5></a>
+        <a href="/autopack-3l-sentinel"><img class="img-responsive" src="/assets/img/product/autopack-3l-05.jpg" alt="AutoPack-3L">
+        <h5>AutoPack 3L Sentinel</h5></a>
       </div>
       <div class="item">
         <a href="/autopack-3l"><img class="img-responsive" src="/assets/img/product/thumb-autopack-3l-01.jpg" alt="AutoPack-3L">
@@ -231,6 +231,10 @@ master-slider: yes
       <div class="item">
         <a href="/autopack-2l"><img class="img-responsive" src="/assets/img/product/thumb-autopack-2l-01.jpg" alt="AutoPack-2L">
         <h5>AutoPack 2L</h5></a>
+      </div>
+      <div class="item">
+        <a href="/autopack-prop"><img class="img-responsive" src="/assets/img/product/thumb-autopack-pro-01.jpg" alt="AutoPack-LWP">
+        <h5>AutoPack ProP</h5></a>
       </div>
       <div class="item">
         <a href="/propositioner"><img class="img-responsive" src="/assets/img/product/thumb-propositioner-01.jpg" alt="ProPositioner">
