misc updates, including Sentinel htaccess redirects

--- a/index.html
+++ b/index.html
@@ -390,10 +390,10 @@ landing: yes
     <div class="section-heading">
       <h2>Featured Story</h2>
     </div>
-    <a href="/17-jerry-carter">
-      <img src="assets/img/podcast/episode-17-jerry-carter.jpg" alt="Episode 17: High-Pressure Hosing Innovation" class="img-responsive" />
+    <a href="/18-john-wolgamott">
+      <img src="assets/img/podcast/episode-18-john-wolgamott.jpg" alt="Episode 18 - A Conversation with StoneAge Co-Founder, John Wolgamott" class="img-responsive" />
+      <p style="padding-top: 10px;"><strong>Industrial Theory Podcast Episode 18</strong><br><span class="grey">A Conversation with StoneAge Co-Founder, John Wolgamott</span></p>
     </a>
-    <p style="padding-top: 10px;"><strong>Industrial Theory Podcast Episode 17</strong><br><span class="grey">High-Pressure Hosing Innovation featuring Jerry Carter of SpirStar</span></p>
     <div class="section-heading margin-top-30">
       <h2>Mobile App</h2>
     </div>
