--- a/waterblast-automation/autobox-2l.html
+++ b/waterblast-automation/autobox-2l.html
@@ -109,7 +109,7 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Tool Model</th>
-                  <td colspan="2">ABX-2L-B</td>
+                  <td colspan="2">ABX-2L-B-V2</td>
                 </tr>
                 <tr>
                   <th>Hose Size</th>
@@ -122,8 +122,8 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Push/Pull Force</th>
-                  <td>10–60 lb</td>
-                  <td><span class="metric">4.5–27 kg</span></td>
+                  <td>15-70 lb Single motor<br>15-150 lb Dual motor</td>
+                  <td><span class="metric">7-32 kg Single motor<br>7-68 kg Dual motor</span></td>
                 </tr>
                 <tr>
                   <th>Pitch Adjustment</th>
@@ -131,9 +131,9 @@ master-slider: yes
                   <td><span class="metric">16-61 mm</span></td>
                 </tr>
                 <tr>
-                  <th>Operating Air Pressure</th>
-                  <td>100 psi</td>
-                  <td><span class="metric">0.70 MPa</span></td>
+                  <th>System Air Consumption</th>
+                  <td>50 cfm at 100 psi</td>
+                  <td><span class="metric">1416 lpm at 6,8 bar</span></td>
                 </tr>
                 <tr>
                   <th>Dimensions</th>
@@ -142,8 +142,8 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Weight</th>
-                  <td>43 lbs</td>
-                  <td><span class="metric">20 kg</span></td>
+                  <td>43 lb Single motor<br>48 lb Dual motor</td>
+                  <td><span class="metric">20 kg Single motor<br>22 kg Dual motor</span></td>
                 </tr>
               </tbody>
               </table>
@@ -169,8 +169,7 @@ master-slider: yes
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
 <!--                <li><a href="/assets/pdf/manuals/ABX-2L-V2_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-2L User Manual</a> <em class="grey">- Current 8mm version</em></li>-->
-                <li><a href="/assets/pdf/manuals/ABX-2L-B_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;AutoBox 2L User Manual</a></li>
-                <li><a href="/assets/pdf/manuals/CB-ABX_user_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;CB-ABX Control Box User Manual</a></li>
+                <li><a href="/assets/pdf/manuals/ABX-2L-B-V2_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;AutoBox 2L User Manual</a><br><br><em class="grey">Manuals for previous product versions can be found in the <a href="/manuals">Discontinued section of our Product Manuals page</a>.</em></li>
               </ul>
             </div>
             <div class="col-sm-4">
