--- a/waterblast-automation/autobox-3l.html
+++ b/waterblast-automation/autobox-3l.html
@@ -77,7 +77,7 @@ master-slider: yes
         <li>Hose clamp pressure and feed rates can be remotely adjusted on the fly for repeatable, consistent cleaning</li>
         <li>Proven reliability on the toughest jobs and most corrosive environments</li>
         <li>Low cost of ownership – low cost components, quick and easy maintenance</li>
-        <li>Easy upgrade to <a href="/sentinel">Sentinel Automation Technology</a></li>
+        <li>Conversion available with <a href="/sentinel">Sentinel Automation Technology</a></li>
       </ul>
       
       <div class="accessories">
