--- a/waterblast-automation/autopack-3l.html
+++ b/waterblast-automation/autopack-3l.html
@@ -65,7 +65,7 @@ master-slider: yes
         <li>Standardized kits keep your workforce organized and efficient</li>
         <li>Job box protects your equipment, simplifies transport and minimizes set-up time</li>
         <li>Customized storage inserts allow for quick visual inventory management</li>
-        <li><a href="/sentinel">Sentinel-ready</a></li>
+        <li>Conversion available with <a href="/sentinel">Sentinel Automation Technology</a></li>
       </ul>
       
       <div class="accessories">
