--- a/waterblast-automation/autopack-2l.html
+++ b/waterblast-automation/autopack-2l.html
@@ -35,10 +35,12 @@ master-slider: yes
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/abx-2l-03.jpg" alt="AutoPack automated equipment kits for exchanger cleaning">
             <img class="ms-thumb" src="/assets/img/product/thumb-abx-2l-03.jpg" alt="thumb">
           </div>
+<!--
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/autopack-2l-b-02.jpg" alt="AutoPack automated equipment kits for exchanger cleaning">
             <img class="ms-thumb" src="/assets/img/product/thumb-autopack-2l-b-02.jpg" alt="thumb">
           </div>
+-->
         </div>
       </div>
       <!-- End Master Slider -->
@@ -164,15 +166,13 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Manuals</h3>
-            <li><a href="/assets/pdf/manuals/ABX-2L-B_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-2L Manual</a></li>
-            <li><a href="/assets/pdf/manuals/LWP-500-V2_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;Lightweight Positioner Manual</a></li>
-            <li><a href="/assets/pdf/manuals/CB-ABX_user_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;CB-ABX Control Box Manual</a></li>
+            <li><a href="/assets/pdf/manuals/ABX-2L-B-V2_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;AutoBox 2L Manual</a></li>
+            <li><a href="/assets/pdf/manuals/LWPS-100_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;Lightweight Positioner Manual</a></li>
           </ul>
         </div>
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/reference/AutoPack-2L-B_job_box_contents.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoPack 2L Job Box Contents</a></li>
             <li><a href="/assets/pdf/tool-talks/ABX-2L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox 2L Tool Talk</a></li>
           </ul>
         </div>
