--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -161,7 +161,7 @@ permalink: /waterblast-tools-automated-equipment
 -->
 
     <div class="mix exchanger-cleaning" data-name="abx-2l" data-designation="automated">
-      <a href="/abx-2l" class="search-text">
+      <a href="/autobox-2l" class="search-text">
         <img src="/assets/img/product/abx-2l-01.jpg" class="img-responsive" />
         <h3>AutoBox 2L</h3>
         <h5>Dual flex-lancing system</h5>
