--- a/manuals.html
+++ b/manuals.html
@@ -58,16 +58,16 @@ permalink: /manuals
             </thead>
             <tbody class="searchable">
               <tr>
-                <td><a href="/abx-2l">ABX-2L-B</a><br></td>
-                <td>AUTOBOX ABX-2L-B<br>Hose tractor for dual flex lancing of exchanger tube IDs</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L-B_manual.pdf" target="_blank" class="btn btn-sm">PL 673</a><br><small class="grey">Updated: 11/2019</small></td>
+                <td><a href="/abx-2l">ABX-2L-B-V2</a><br></td>
+                <td>AUTOBOX 2L<br>Hose tractor for dual flex lancing of exchanger tube IDs</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L-B-V2_manual.pdf" target="_blank" class="btn btn-sm">PL 673</a><br><small class="grey">Updated: 11/2021</small></td>
                 <td class="text-center"></td>
-                <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-2L_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 12/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-2L-B-V2_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 11/2021</small></td>
                 <td class="text-center"></td>
               </tr> 
               <tr>
                 <td><a href="/abx-3l">ABX-3L-V3</a><br></td>
-                <td>AUTOBOX 3L (No Sentinel)<br>Hose tractor for triple flex lancing of exchanger tube IDs </td>
+                <td>AUTOBOX 3L<br>Hose tractor for triple flex lancing of exchanger tube IDs </td>
                 <td class="text-center"><a href="/assets/pdf/manuals/ABX-3L-V3_manual.pdf" target="_blank" class="btn btn-sm">PL 702</a><br><small class="grey">Updated: 09/2021</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/Sentinel_brochure.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 11/2021</small></td>
@@ -765,7 +765,7 @@ permalink: /manuals
             <tbody class="searchable-2">
               <tr>
                 <td>ABX-100-8</td>
-                <td>AUTOBOX ABX-2L HOSE GUIDE (ABX-100-XX) UPGRADE<br>Upgrade process for ABX-2L to ABX-2L-V2 (6mm to 8mm hose)</td>
+                <td>AUTOBOX ABX-2L HOSE GUIDE (ABX-100-XX) UPGRADE</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/ABX-100-XX_Upgrade_Guide.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_ABX-100.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
@@ -780,6 +780,12 @@ permalink: /manuals
                 <td>AUTOBOX ABX-2L &mdash; Version 2</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L-V2_manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_ABX-2L-V2.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
+              <tr>
+                <td>ABX-2L-B<br></td>
+                <td>AUTOBOX ABX-2L-B &mdash; Version 1</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L-B_manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
+                <td class="text-center"></td>
               </tr>
               <tr>
                 <td>ABX-3L</td>
