misc updates: manuals & abx-2l product img

--- a/index.html
+++ b/index.html
@@ -356,6 +356,11 @@ landing: yes
     </div>
     <ul class="home-news list-unstyled"> 
       <li>
+        <h4><a href="https://news.stoneagetools.com/safer-smarter-industrial-cleaning-this-manufacturers-motivation-towards-automation/">Safer, Smarter Industrial Cleaning – This Manufacturer’s Motivation towards Automation</a></h4>
+        <p>Advancements in automation have transformed operational productivity and are helping save the lives of industrial, frontline workers around the world. <br>
+        <small><i class="fa fa-newspaper-o"></i> Blog, December 2021</small></p>
+      </li>
+      <li>
         <h4><a href="https://news.stoneagetools.com/sentinel-automation-technology-for-automated-heat-exchanger-cleaning-is-here">Sentinel Automation Technology for Automated Heat Exchanger Cleaning Is Here</a></h4>
         <p>StoneAge Inc. is pleased to announce the official release of Sentinel Automation Technology for automated exchanger tube cleaning, delivering a 30% performance increase over traditional methods.<br>
         <small><i class="fa fa-newspaper-o"></i> Blog, October 2021</small></p>
@@ -374,11 +379,6 @@ landing: yes
         <h4><a href="https://news.stoneagetools.com/what-to-expect-in-2021-from-stoneage-ceo-kerry-siggins/">What to Expect in 2021 from StoneAge CEO, Kerry Siggins</a></h4>
         <p>2021 is shaping up to be a fantastic year at StoneAge. Our mission is to make our customers’ lives easier and safer. Read what we are planning for this year.<br>
         <small><i class="fa fa-newspaper-o"></i> Blog, February 2021</small></p>
-      </li>
-      <li>
-        <h4><a href="https://news.stoneagetools.com/from-the-field-customer-experience-on-the-2-badger/">From the Field: Customer Experience on the 2″ Badger</a></h4>
-        <p>How the StoneAge 2″ Badger elevated the cleaning of a German refinery by completing all tasks perfectly, regardless of high level of contamination.<br>
-        <small><i class="fa fa-newspaper-o"></i> Blog, November 2020</small></p>
       </li>
       <li><a href="https://news.stoneagetools.com/">More news here</a></li>
     </ul>
