misc updates, TJ Suiter podcast

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ landing: yes
       <li><a href="/waterblast-tools-automated-equipment#tank" class="btn">Tanks/Vessels</a></li>
       <li><a href="/waterblast-tools-automated-equipment#boiler" class="btn">Boilers/Furnaces</a></li>
 <!--      <li><a href="/waterblast-tools-automated-equipment#concrete" class="btn">Concrete</a></li>-->
-      <li><a href="/sewer-tools" class="btn">Sewer Lines</a></li>
+      <li><a href="https://www.warthog-nozzles.com/" target="_blank" class="btn">Sewer Lines</a></li>
       <li><a href="/downhole-tools" class="btn">Downhole</a></li>
       <li><a href="#" data-featherlight="#search-box"><img src="/assets/img/icon_search_lg.png" alt="Search" style="width:20px; margin-left:15px;" /></a></li>
     </ul>
@@ -404,9 +404,9 @@ landing: yes
     <div class="section-heading">
       <h2>Featured Story</h2>
     </div>
-    <a href="/19-francesco-coletti ">
-      <img src="assets/img/podcast/episode-19-francesco-coletti.jpg" alt="Episode 19 - The Power of Predictive Maintenance for Industrial Heat Transfer" class="img-responsive" />
-      <p style="padding-top: 10px;"><strong>Industrial Theory Podcast Episode 19</strong><br><span class="grey">Dr. Francesco Coletti: The Power of Predictive Maintenance for Industrial Heat Transfer</span></p>
+    <a href="/20-tj-suiter">
+      <img src="assets/img/podcast/episode-20-tj-suiter.jpg" alt="Episode 20 - Protecting Wastewater Workers from Lethal Pathogens with TJ Suiter" class="img-responsive" />
+      <p style="padding-top: 10px;"><strong>Industrial Theory Podcast Episode 20</strong><br><span class="grey">TJ Suiter: Protecting Wastewater Workers from Lethal Pathogens</span></p>
     </a>
     <div class="section-heading margin-top-30">
       <h2>Mobile App</h2>
