--- a/request-demo.html
+++ b/request-demo.html
@@ -25,7 +25,7 @@ permalink: /request-demo
   <aside class="col-sm-4 col-sm-offset-1 padding-tb-30 cta">
     <h2 style="font-size:28px; font-weight: 600; text-align: center;">Request a demo</h2>
     <!-- Pardot contact form -->
-    <iframe src="https://www2.stoneagetools.com/l/644393/2019-04-08/442k1" width="100%" scrolling="no" id="sizetracker" frameborder="0"></iframe>    
+    <iframe src="https://www2.stoneagetools.com/l/644393/2019-04-08/442k1" width="100%" height="600" scrolling="no" id="sizetracker" frameborder="0"></iframe>    
 
     <!-- Pardot form sizing -->
     <script type="text/javascript">
