--- a/solutions.html
+++ b/solutions.html
@@ -103,7 +103,7 @@ master-slider: yes
         <div id="collapseThree" role="tabpanel" aria-labelledby="headingThree">
           <div class="panel-body">
             <!-- Pardot contact form -->
-            <iframe src="https://info.stoneagetools.com/l/644393/2019-07-23/924kd" width="100%" scrolling="no" id="sizetracker" frameborder="0"></iframe>    
+            <iframe src="https://info.stoneagetools.com/l/644393/2019-07-23/924kd" width="100%" height="400" scrolling="no" id="sizetracker" frameborder="0"></iframe>    
 
             <!-- Pardot form sizing -->
             <script type="text/javascript">
