Compass updates, new catalog

--- a/index.html
+++ b/index.html
@@ -14,6 +14,58 @@ landing: yes
   
   <!-- new slide -->
   <div class="ms-slide slide-4">
+    <img src="/assets/img/features/bg_blue_wwett22.jpg" data-src="/assets/img/features/bg_blue_wwett22.jpg" alt="StoneAge background"/> 
+
+    <div class="ms-layer feature-h1" style="width:400px;"   
+      data-effect="t(true,n,20,n,n,n,n,n,n,n,n,n,n,n,n)" 
+      data-duration="2400" 
+      data-delay="500" 
+      data-ease="easeOutQuint"                
+      data-offset-x="150" 
+      data-offset-y="-80" 
+      data-origin="ml" 
+      data-position="normal"><span style="color:#00adef;letter-spacing:1px;font-size:130%;">WWETT 2022</span><br><span style="letter-spacing:1px;font-size:70%;">Visit us in Booth #6305</span>
+    </div>
+
+    <div class="ms-layer feature-h2" style="width:400px;"
+      data-effect="t(true,n,40,n,n,n,n,n,n,n,n,n,n,n,n)" 
+      data-duration="2200" 
+      data-delay="800" 
+      data-ease="easeOutQuint"                
+      data-offset-x="150" 
+      data-offset-y="10" 
+      data-origin="ml" 
+      data-position="normal"   
+         data-masked="true"><span style="font-weight:400; text-transform: none;">Haven’t secured your tickets yet?<br><strong style="color:#00adef;">No problem!</strong></span>
+    </div>
+    
+    <img  class="ms-layer" src="/assets/img/features/wwett_2022_01.png" style="" 
+         data-src="/assets/img/features/wwett_2022_01.png" alt="WWETT 2022"
+         data-effect="t(true,n,140,n,n,n,n,n,n,n,n,n,n,n,n)"   
+         data-ease="easeOutQuint"       
+         data-parallax="160" 
+         data-type="image"          
+         data-offset-x="0" 
+         data-offset-y="50" 
+         data-origin="tr" 
+         data-position="normal" />
+
+    <a href="https://l.feathr.co/WWETT2022/Warthog-Nozzles-By-StoneAge-Inc" target="_blank" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
+       data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
+       data-duration="2400" 
+       data-delay="1600" 
+       data-ease="easeOutQuint"        
+       data-type="button"        
+       data-offset-x="150" 
+       data-offset-y="104" 
+       data-origin="ml" 
+       data-position="normal">Get Your Pass
+    </a>
+  </div>
+  <!-- end of slide -->
+  
+  <!-- new slide -->
+  <div class="ms-slide slide-4">
     <img src="/assets/img/features/bg_gray.jpg" data-src="/assets/img/features/bg_gray.jpg" alt="StoneAge background"/> 
 
 <!--
