--- a/waterblast-automation/autobox-2l.html
+++ b/waterblast-automation/autobox-2l.html
@@ -175,6 +175,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
+                <li><a href="/assets/pdf/data-sheets/ABX-2L_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox 2L Brochure</a></li>
                 <li><a href="/assets/pdf/tool-talks/ABX-2L-B-V2_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox 2L Tool Talk</a></li>
               </ul>
             </div>
