--- a/waterblast-automation/propositioner.html
+++ b/waterblast-automation/propositioner.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 page-type: product
-title: StoneAge ProPositioner for AutoBox ABX-PRO Automated Flex Lancing Systems
-description: The ultra-portable and lightweight ProPositioner provides controlled, efficient indexing for single-lance automated exchanger tube cleaning with AutoBox ABX-PRO. This cost-effective system is engineered to mount to an exchanger face with a single point of contact for quick set-up. Learn more about the ProPositioner here.
+title: StoneAge Compass for AutoBox ABX-PRO Automated Flex Lancing Systems
+description: The ultra-portable and lightweight Compass provides controlled, efficient indexing for single-lance automated exchanger tube cleaning with AutoBox ABX-PRO. This cost-effective system is engineered to mount to an exchanger face with a single point of contact for quick set-up. Learn more about the Compass here.
 image: /assets/img/og/propositioner-og.jpg
-permalink: /propositioner
+permalink: /compass
 master-slider: yes
 ---
 
@@ -14,7 +14,7 @@ master-slider: yes
     <ul class="breadcrumb">
       <li><a href="/">Home</a></li>
       <li><a href="/waterblast-tools-automated-equipment">Waterblast Tools &amp; Equipment</a></li>
-      <li class="active">ProPositioner</li>
+      <li class="active">Compass</li>
     </ul> 
   </div>
 </div>
@@ -52,7 +52,7 @@ master-slider: yes
 
     <div class="col-md-7 padding-left-60">
       <div class="product-heading">
-        <h1>ProPositioner</h1>
+        <h1>Compass</h1>
         <div class="dropdown product-social">
           <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
           <ul class="dropdown-menu">
@@ -63,9 +63,9 @@ master-slider: yes
       </div>
 <!--      <p class="product-description promo-heading"><em>Package it with AutoPacks! <a href="/autopack-lwp" style="font-weight:300;">Find out how <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></em></p>-->
       
-      <p class="product-description">The ProPositioner is an automated <a href="/abx-pro">ABX-PRO (ProDrive)</a> indexing device designed for portability and versatility at a cost-effective price.</p>
+      <p class="product-description">Formerly known as the ProPositioner, the Compass is an automated <a href="/abx-pro">ABX-PRO (ProDrive)</a> indexing device designed for portability and versatility at a cost-effective price.</p>
       <p class="product-description">The system is engineered to mount to an exchanger face with a single point of contact for quick set-up and will articulate in a radial motion from its connecting point. It is intended to allow the user to attach the device once and clean all tubes in most bundles without re-mounting.</p>
-      <p class="product-description">The ProPositioner is an automated indexing device for single-lance tube cleaning designed for portability and versatility at an entry level price.</p>
+      <p class="product-description">The Compass is an automated indexing device for single-lance tube cleaning designed for portability and versatility at an entry level price.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
@@ -104,18 +104,29 @@ master-slider: yes
           <table class="table specs table-hover">
           <tbody>
             <tr>
+              <th>Tool Family</th>
+              <td colspan="2">Compass</td>
+            </tr>
+<!--
+            <tr>
               <th>Tool Model</th>
-              <td colspan="2">PROP-300</td>
+              <td colspan="2">PROP-DBP</td>
+            </tr>
+-->
+            <tr>
+              <th>Weight, assembled</th>
+              <td>76.5 lb</td>
+              <td class="metric">34.7 kg</td>
             </tr>
             <tr>
-              <th>Horizontal Length</th>
-              <td>45 in.</td>
-              <td><span class="metric">114 cm</span><br></td>
+              <th>Usable Exchanger Diameter Range</th>
+              <td>Inches: 60, 69 , 84 or 96 with rail extension</td>
+              <td class="metric">Millimeters: 1524, 1753, 2134 or
+2438 with rail extension</td>
             </tr>
             <tr>
-              <th>Weight complete</th>
-              <td>80 lb</td>
-              <td><span class="metric">36.2 kg</span></td>
+              <th>Input power requirements (camera system)</th>
+              <td colspan="2">100-240V AC 1.8A</td>
             </tr>
           </tbody>
           </table>
@@ -129,17 +140,12 @@ master-slider: yes
 
       <!-- Manuals/Docs -->
       <section id="section-bar-2">
-        <div class="col-sm-4">
+        <div class="col-sm-8">
           <ul class="list-unstyled basic">
             <h3>Manuals</h3>
-            <li><a href="/assets/pdf/manuals/PROP-300_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ProPositioner Manual</a></li>
-          </ul>
-        </div>
-        <div class="col-sm-4">
-          <ul class="list-unstyled basic">
-            <h3>Documentation</h3>
-            <li><a href="/assets/pdf/data-sheets/ProPositioner_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ProPositioner Brochure</a></li>
-            <li><a href="/assets/pdf/tool-talks/ABX-PRO_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-PRO Tool Talk</a></li>            
+            <li><a href="/assets/pdf/manuals/PROP-DBP_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Compass (Prop-DBP) Manual</a></li>
+            <li><a href="/assets/pdf/manuals/ABX-PRO_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-PRO (ProDrive) Manual</a></li>
+            <li><a href="/assets/pdf/manuals/PROP-300_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Control Box (Prop-300) Manual</a></li>
           </ul>
         </div>
         <aside class="col-sm-3 col-sm-offset-1 aside-box">
