--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -82,6 +82,7 @@ permalink: /waterblast-tools-automated-equipment
       </a>
     </div>
 
+<!--
     <div class="mix pipe-cleaning exchanger-cleaning" data-name="autopack-prop" data-designation="automated">
       <a href="/autopack-prop" class="search-text">
         <img src="/assets/img/product/autopack-pro-01.jpg" class="img-responsive" />
@@ -100,6 +101,7 @@ permalink: /waterblast-tools-automated-equipment
         <button>View Details</button>
       </a>
     </div>
+-->
 
     <div class="mix pipe-cleaning exchanger-cleaning" data-name="autopack-pro" data-designation="automated">
       <a href="/autopack-pro" class="search-text">
@@ -264,6 +266,26 @@ permalink: /waterblast-tools-automated-equipment
         </table>
         <button>View Details</button>
       </a>
+    </div>  
+
+    <div class="mix exchanger-cleaning accessories" data-name="propositioner" data-designation="automated">
+      <a href="/compass" class="search-text">
+        <img src="/assets/img/product/propositioner-01.jpg" class="img-responsive" />
+        <h3>Compass</h3>
+        <h5>Formerly known as ProPositioner</h5>
+        <table class="table">
+          <tbody>
+            <tr>
+              <th colspan="2" style="text-align:center;">Ultra-portable indexing for single-lance tube cleaning</th>
+            </tr>
+            <tr>
+              <td colspan="2" style="text-align:center;">Quick to set up and easy to use</td>
+            </tr>
+          </tbody>
+        </table>
+        <button>View Details</button>
+      </a>
+    </div>
     </div>
 
     <div class="mix exchanger-cleaning accessories" data-name="fin-fan" data-designation="automated">
@@ -323,26 +345,7 @@ permalink: /waterblast-tools-automated-equipment
         </table>
         <button>View Details</button>
       </a>
-    </div>    
-
-    <div class="mix exchanger-cleaning accessories" data-name="propositioner" data-designation="automated">
-      <a href="/propositioner" class="search-text">
-        <img src="/assets/img/product/propositioner-01.jpg" class="img-responsive" />
-        <h3>ProPositioner</h3>
-        <h5>For ProDrive</h5>
-        <table class="table">
-          <tbody>
-            <tr>
-              <th colspan="2" style="text-align:center;">Ultra-portable indexing for single-lance tube cleaning</th>
-            </tr>
-            <tr>
-              <td colspan="2" style="text-align:center;">Quick to set up and easy to use</td>
-            </tr>
-          </tbody>
-        </table>
-        <button>View Details</button>
-      </a>
-    </div>
+    </div>  
 
     <div class="mix exchanger-cleaning" data-name="rigid-lance-machine" data-designation="automated">
       <a href="/rigid-lance-machine" class="search-text">
